--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "tailwind-setup",
+  "name": "Tailwind CSS Starter Kit",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "Hello 😃!", 
+    "dev" : "tailwindcss -i ./src/input.css -o ./public/style.css --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "tailwindcss": "^3.4.14"
+    "tailwindcss": "^3.3.3"
   }
 }
